<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kotz.myapplication80.MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/need"
                android:textSize="25dp"
                android:layout_marginTop="25dp"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkbox_chille"
                android:checked="true"
                android:onClick="onCheckboxClicked"
                android:text="@string/chille"

                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/vegetable"
                android:id="@+id/checkbox_vegetable"

                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/egg"
                android:id="@+id/checkbox_egg"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/oil"
                android:id="@+id/checkbox_oil"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/where"
                android:textSize="25dp"
                android:layout_marginTop="25dp"


                />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_here"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/here"
                    />



                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_home"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/home"
                    />


            </RadioGroup>


            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="How to cook"
                android:background="@drawable/button_selector"
                android:textColor="#FFFFFF"
                android:layout_marginTop="25dp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/st"
                android:textSize="25dp"
                android:id="@+id/text1"
                />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
